# invidious

./: .gitignore
invidious-rust/: Cargo.toml
invidious-rust/config/: config.yaml
invidious-rust/sql/migrations/: 0001_channels.sql  0002_videos.sql  0003_channel_videos.sql  0004_users.sql  0005_session_ids.sql  0006_nonces.sql  0007_annotations.sql  0008_playlists.sql  0009_playlist_videos.sql  0010_videos_unlogged.sql
invidious-rust/src/: lib.rs  main.rs
invidious-rust/src/auth/: mod.rs
invidious-rust/src/config/: mod.rs
invidious-rust/src/db/: annotations.rs  channel_videos.rs  channels.rs  migrations.rs  mod.rs  nonces.rs  playlists.rs  sessions.rs  statistics.rs  users.rs  videos.rs
invidious-rust/src/jobs/: base_job.rs  clear_expired.rs  instance_list_refresh.rs  mod.rs  notification.rs  pull_popular_videos.rs  refresh_channels.rs  refresh_feeds.rs  statistics.rs  subscribe_to_feeds.rs
invidious-rust/src/middleware/: auth.rs  mod.rs
invidious-rust/src/models/: mod.rs
invidious-rust/src/routes/: account.rs  channels.rs  feeds.rs  home.rs  login.rs  mod.rs  playlists.rs  proxy.rs  search.rs  watch.rs
invidious-rust/src/templates/: mod.rs
invidious-rust/src/yt_backend/: connection_pool.rs  extractors.rs  mod.rs  url_sanitizer.rs  youtube_api.rs
invidious-rust/templates/: base.html  channel.html  error.html  home.html  login.html  navbar.html  playlist.html  popular.html  preferences.html  search.html  sidebar.html  subscriptions.html  trending.html  watch.html
invidious-rust/templates/components/: channel_info.html  channel_item.html  (+4 more)
(+1 files in other folders)
