[package]
name = "invidious"
version = "0.1.0"
edition = "2021"
authors = ["Invidious team <contact@invidious.io>"]
description = "Invidious is an alternative front-end to YouTube"
license = "AGPL-3.0-only"
repository = "https://github.com/iv-org/invidious"
rust-version = "1.75"

[dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }

# HTTP server
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "fs"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# HTTP client for YouTube backend
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# WebSockets
tokio-tungstenite = "0.26"
futures-util = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Templating
tera = "1.20"

# Utilities
thiserror = "2.0"
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
url = "2.5"
urlencoding = "2.1"
regex = "1.11"
once_cell = "1.20"
parking_lot = "0.12"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Password hashing
bcrypt = "0.16"

# Time expiration
time = "0.3"

[dev-dependencies]
tokio-test = "0.4"